# VirtualMemorySimulator-Linux-

./: CMakeLists.txt  README.md  main.cpp  my_app
Arch_Proj_NEW/: CMakeLists.txt  Guid.txt  MMU.cpp  OS  OperatingSystem.cpp  PageEntry.h  VMAlgorithms.cpp  VMAlgorithms.h  mmu  os  os.out
